--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "makeup": "^1.0.1",
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
     "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.3",
+    "express": "^4.13.3",
+    "makeup": "^1.0.1",
+    "morgan": "^1.6.1",
+    "normalize.css": "^4.1.1",
+    "serve-favicon": "^2.3.0",
     "swig": "^1.4.2"
   },
   "devDependencies": {
