--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "author": "Nikolay Savchenko <3mg@bk.ru>",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "surge": "surge --project ./dist --domain axioma-test-front.surge.sh"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
